# OpenPineBuds

./: .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  backup.sh  build.sh  clear.sh  convert.sh  docker-compose.yml  download.sh  log.txt  start_dev.sh  uart_log.sh
src/: CMakeLists.txt  Makefile  build.sh  notes.txt
src/apps/: CMakeLists.txt
src/apps/anc/: CMakeLists.txt  Makefile
src/apps/apptester/: CMakeLists.txt  Makefile  app_audtest.cpp  app_audtest.h  audiobuffer.c  audiobuffer.h
src/apps/audioplayers/: CMakeLists.txt  Makefile  a2dpplay.cpp  app_audio.cpp  bt_sco_chain.c  bt_sco_chain_cfg.h  bt_sco_chain_cfg_default.c  bt_sco_chain_cp.h  bt_sco_chain_thirdparty.c  cvsdplay.cpp  digmici2splay.cpp  flacplay.cpp  msbcplay.cpp  plc_utils.c  plc_utils.h  voice_test.c  voicebtpcmplay.cpp
src/apps/battery/: CMakeLists.txt  Makefile  app_battery.cpp
src/apps/cmd/: CMakeLists.txt  Makefile
src/apps/common/: CMakeLists.txt  app_spec_ostimer.cpp  app_spec_ostimer.h  app_thread.c  app_thread.h  app_utils.h  randfrommic.c  randfrommic.h
src/apps/factory/: app_factory.h  app_factory_audio.cpp  app_factory_audio.h  app_factory_bt.cpp  sys_api_cdc_comm.c  sys_api_cdc_comm.h
src/apps/key/: CMakeLists.txt  app_key.cpp
src/apps/main/: CMakeLists.txt  Makefile  app_status_ind.h  apps.cpp  apps_tester.cpp  common_apps_imports.h  gfps.cpp  ibrt.cpp  key_handler.cpp  key_handler.h  led_control.cpp  lhdc.cpp  rb_codec.cpp  rb_codec.h
src/apps/mic/: CMakeLists.txt  Makefile  app_mic.h
src/apps/mic_alg/: CMakeLists.txt  Makefile  app_mic_alg.h
src/apps/pwl/: CMakeLists.txt  app_pwl.cpp  app_pwl.h
src/apps/voice_detector/: CMakeLists.txt  Makefile  app_voice_detector.cpp  vad_sensor.h  voice_detector.c
src/config/: common.mk
src/config/_default_cfg_src_/: app_status_ind.c  slave_code.S  tgt_hardware.c  tgt_hardware.h
src/config/bak_open/: tgt_hardware.c
src/config/best2300p_ibrt/: target.mk  tgt_hardware.c
src/config/best2300p_ibrt_anc/: tgt_hardware.c  tgt_hardware.h
src/config/mic_alg/: tgt_hardware.c  tgt_hardware.h
src/config/open_source/: tgt_hardware.h
src/platform/: CMakeLists.txt  Makefile
src/platform/cmsis/: CMakeLists.txt  mpu_armv7m.c  patch.c  patch_armv7m.c  reg_patch.h  retarget_armclang.cpp  retarget_armclang_asm.S  system_ARMCM.c  system_cp.c  system_utils.c
src/platform/drivers/: CMakeLists.txt  Makefile
src/platform/hal/: CMakeLists.txt  Makefile  hal_analogif.h  hal_aud.h  hal_bootmode.c  hal_bootmode.h  hal_btdump.c  hal_btdump.h  hal_btpcm.c  hal_btpcm.h  hal_btpcmip.h  hal_cache.c  hal_cache.h  hal_chipid.h  hal_cmd.c  hal_cmd.h  hal_cmu.h  hal_cmu_common.c  hal_codec.h  hal_codec_common.c  hal_dma.c  hal_dma.h  hal_hwfft.h  hal_i2c.c  hal_i2cip.h  hal_i2s.h  hal_i2s_tdm.c  hal_intersys.c  hal_iomux.h  hal_key.c  hal_key.h  hal_location.h  hal_mcu2cp.c  hal_mcu2cp.h  hal_memsc.c  hal_norflash.c  hal_norflash.h  hal_norflaship.h  hal_norflaship_v2.c  hal_overlay.c  (+41 more)
src/platform/main/: main.cpp  noapp_main.cpp  nostd_main.c  startup_main.S
src/rtos/: CMakeLists.txt  Makefile
src/rtos/rtx5/: Makefile  cmsis_os1.c  os_systick.c  rtx_core_ca.h  rtx_lib.h  rtx_msgqueue.c  rtx_mutex.c  rtx_semaphore.c  rtx_system.c  rtx_thread_dump.c
src/rust/: CMakeLists.txt  Cargo.toml
src/rust/src/: lib.rs
src/scripts/link/: best1000.lds.S  best1000_intsram.lds.S  best1000_intsram.lds_scat.S  best1000_msbc_aac.lds.S  best1000savepower.lds.S  best2000_dma.lds.S  programmer_inflash.lds.S  rom.lds.S
src/services/: Makefile
src/services/anc_spp_tool/: anc_parse_data.h
src/services/app_ai/: Makefile
src/services/app_ibrt/: Makefile
src/services/audio_process/: audio_cfg.c  audio_cfg.h  audio_process.c  audio_process.h
src/services/audioflinger/: Makefile  audioflinger.c  audioflinger.h
src/services/auto_test/: Makefile  at_thread.cpp  at_thread_user.cpp  at_thread_user.h
src/services/ble_app/: app_ble_uart.cpp  app_ble_uart.h  ble_app_dbg.h
src/services/ble_profiles/: Makefile
src/services/ble_stack/: Makefile
src/services/bridge/: bridge.h
src/services/bt_app/: app_a2dp.cpp  app_a2dp.h  app_a2dp_source.cpp  app_a2dp_source.h  app_bqb_new_profile.cpp  app_bt.h  app_bt_func.cpp  app_bt_func.h  app_bt_hid.cpp  app_bt_hid.h  app_bt_media_manager.cpp  app_bt_media_manager.h  app_bt_stream.cpp  app_bt_stream.h  app_bt_trace.h  app_btgatt.cpp  app_btmap_sms.h  app_dip.h  app_fp_rfcomm.cpp  app_fp_rfcomm.h  app_hfp.cpp  app_hfp.h  app_hsp.cpp  app_media_player.h  app_rfcomm_mgr.cpp  app_ring_merge.h  app_sec.cpp  app_spp.cpp  app_spp.h  audio_prompt_sbc.cpp  audio_prompt_sbc.h  besbt.h  res_audio_data.h  res_audio_ring.h
src/services/cp_accel/: Makefile  cp_accel.c
src/services/ibrt_core/: Makefile
src/services/ibrt_ota/: Makefile
src/services/ibrt_ui/: Makefile
src/services/norflash_api/: Makefile  norflash_api.cpp  norflash_api.h
src/services/nv_section/: Makefile  nv_section_dbg.h
src/services/nvrecord/: list_ext.c  list_ext.h  nvrecord.c  nvrecord_ble.c  nvrecord_dev.h  nvrecord_env.c  nvrecord_env.h
src/services/osif/: ddbif_bes.c  osif.h  osif_rtx.c
src/services/ota/: Makefile  ota_common.h
src/services/overlay/: app_overlay.h
src/services/resources/: resources.h
src/services/through_put/: app_through_put.h
src/services/tota/: app_spp_tota.cpp  app_spp_tota_general_service.cpp  app_spp_tota_general_service.h  app_tota.cpp  app_tota.h  app_tota_anc.cpp  app_tota_anc.h  app_tota_cmd_code.h  app_tota_cmd_handler.cpp  app_tota_cmd_handler.h  app_tota_custom.cpp  app_tota_data_handler.cpp  app_tota_flash_program.cpp  app_tota_general.h  app_tota_mic.h  tota_buffer_manager.cpp  tota_buffer_manager.h  tota_stream_data_transfer.cpp  tota_test.cpp
src/utils/: CMakeLists.txt
src/utils/boot_struct/: CMakeLists.txt  norflash_cfg.h  reboot_param.h  tool_msg.h
src/utils/build_info/: build_info.c
src/utils/cqueue/: CMakeLists.txt  cqueue.c  cqueue.h
src/utils/crash_catcher/: CMakeLists.txt  CrashCatcher.c  CrashCatcher_armv7m.S  HexDump.c
src/utils/crc16/: crc16.c  (+1 more)
(+1822 files in other folders)
