add_subdirectory(boot_struct)
#add_subdirectory(build_info)
add_subdirectory(cqueue)
add_subdirectory(crash_catcher)
add_subdirectory(crc16)
add_subdirectory(crc32)
add_subdirectory(encrypt)
add_subdirectory(heap)
add_subdirectory(hexdump)
add_subdirectory(hwtimer_list)
add_subdirectory(intersyshci)
add_subdirectory(kfifo)
#add_subdirectory(libc)
add_subdirectory(list)
add_subdirectory(lockcqueue)
add_subdirectory(retention_ram)
#add_subdirectory(rom_utils)
#add_subdirectory(sha256)
add_subdirectory(xyzmodem)
